Add Dockerfile and Tiltfile config for debugging

--- a/deployments/api.yaml
+++ b/deployments/api.yaml
@@ -19,3 +19,4 @@ spec:
           command: ["/app/build/api"]
           ports:
             - containerPort: 3000
+            - containerPort: 40000
