--- a/deployments/api.yaml
+++ b/deployments/api.yaml
@@ -20,3 +20,6 @@ spec:
           ports:
             - containerPort: 3000
             - containerPort: 40000
+          env:
+            - name: DGRAPH_HOST
+              value: dgraph-public:9080
